--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.57",
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.1",
     "@reduxjs/toolkit": "^1.6.2",
